alterações clean_architecture estrutura